# local_agent_assistant

./: .gitignore  main.py  package.json  pyproject.toml  tsconfig.json
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/config/: env.ts
apps/api/src/routes/: chat.ts
apps/api/src/services/: llm.ts
apps/web/: package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/features/chat/: index.ts
apps/web/src/features/chat/components/: ChatInput.tsx  MessageBlock.tsx  MessageList.tsx
apps/web/src/features/chat/hooks/: useAgentChat.ts
apps/web/src/lib/: utils.ts
apps/web/src/shared/components/: Markdown.tsx
backend/: pyproject.toml
backend/src/: main.py  settings.py
backend/src/agent/: core.py  streaming.py  tool.py
backend/src/db/: base.py  models.py  sqlite.py
backend/src/models/: chats.py  requests.py
backend/src/tools/: code_interpret.py  search.py  web_scraper.py
docs/: architecture.md  brainstorming.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chat/: AgentBlock.tsx
frontend/src/components/common/: Markdown.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: chat.ts
frontend/src/types/: index.ts
src/: settings.py
src/agent/: core.py  streaming.py  tool.py
src/models/: events.py  requests.py
src/tools/: code_interpret.py  search.py  web_scraper.py
